--- a/OLTRA/OLTRA/OLTRA.csproj
+++ b/OLTRA/OLTRA/OLTRA.csproj
@@ -57,6 +57,19 @@
       <Package>gtk-sharp-2.0</Package>
     </Reference>
     <Reference Include="Mono.Posix" />
+    <Reference Include="MonoDevelop.Database.Components, Version=2.6.0.0, Culture=neutral">
+      <Package>monodevelop-database</Package>
+    </Reference>
+    <Reference Include="MonoDevelop.Database.ConnectionManager, Version=2.6.0.0, Culture=neutral">
+      <Package>monodevelop-database</Package>
+    </Reference>
+    <Reference Include="MonoDevelop.Database.Sql, Version=2.2.0.0, Culture=neutral">
+      <Package>monodevelop-database</Package>
+    </Reference>
+    <Reference Include="MonoDevelop.Database.Query, Version=2.6.0.0, Culture=neutral">
+      <Package>monodevelop-database</Package>
+    </Reference>
+    <Reference Include="System.Data" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="gtk-gui\gui.stetic">
