--- a/OLTRA/OLTRA/OLTRA.csproj
+++ b/OLTRA/OLTRA/OLTRA.csproj
@@ -70,6 +70,9 @@
       <Package>monodevelop-database</Package>
     </Reference>
     <Reference Include="System.Data" />
+    <Reference Include="MySql.Data">
+      <HintPath>dependancies\MySql.Data.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="gtk-gui\gui.stetic">
