More work on the classes and GUI

--- a/OLTRA/OLTRA/OLTRA.csproj
+++ b/OLTRA/OLTRA/OLTRA.csproj
@@ -91,6 +91,7 @@
     <Compile Include="AboutDialog.cs" />
     <Compile Include="gtk-gui\OLTRA.AboutDialog.cs" />
     <Compile Include="ExtractionEngine.cs" />
+    <Compile Include="Project.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
