--- a/OLTRA/app.config
+++ b/OLTRA/app.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-	<appSettings>
-		<add key="ProjectsDir" value="$HOME"/>
-	</appSettings>
+	<configSections>
+		<section name="OLTRA_Configuration" type="OLTRA.Configuration, OLTRA"/>
+			
+		</section>
+	</configSections>
 </configuration>
