Lots of work to the VS version of OLTRA.  Now can add projects, delete projects, serialise to disk, etc.

--- a/OLTRA/OLTRA.csproj
+++ b/OLTRA/OLTRA.csproj
@@ -46,7 +46,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Alerts.cs" />
     <Compile Include="ClassTemplate.cs" />
+    <Compile Include="ExtractionEngines.cs" />
     <Compile Include="Main.cs">
       <SubType>Form</SubType>
     </Compile>
