--- a/OLTRA/OLTRA.csproj
+++ b/OLTRA/OLTRA.csproj
@@ -84,6 +84,7 @@
     <EmbeddedResource Include="Resources\AboutBox1.resx">
       <DependentUpon>AboutBox1.cs</DependentUpon>
     </EmbeddedResource>
+    <None Include="Properties\DataSources\Main.DebugItem.datasource" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
